--- a/templates/monitor/monitor.html.twig
+++ b/templates/monitor/monitor.html.twig
@@ -1,6 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+<nav class="navbar navbar-expand navbar-secondary navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a href="#" class="nav-link" id="server-page-refresh"><strong>Refresh</strong></a>
+        </li>
+    </ul>
+</nav>
+
 <div class="container-fluid">
     <div class="row">
         {% for server in servers %}
