--- a/templates/monitor/monitor.html.twig
+++ b/templates/monitor/monitor.html.twig
@@ -11,6 +11,9 @@
             <a href="#" class="nav-link" id="server-page-refresh"><strong>Refresh</strong></a>
         </li>
     </ul>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><span id="server-load-warning" class="text-danger"><i class="fas fa-exclamation-triangle"></i> </span>Load average <span id="server-load-average"></span></li>
+    </ul>
 </nav>
 
 <div class="container-fluid">
